Centered contributors and still working on menu

--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
     <link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
-<body>
+<body class="aBody">
     <header class="homeHeader">
-        <div class="homeHeader-top">
+       <div class="aboutHeader"></div>
+        <div class="homeHeader-top2">
             <i class="fab fa-elementor" id="menu"></i>
             <h1 class="aboutHeader">About the Team</h1>
             <div>
@@ -26,70 +27,73 @@
             <a href="index.html">Home</a>
             <a href="#">PlaceHolder</a>
         </div>
-        <section class="contributors">
-            <div class="people">
-                <div class="contribution">
-                    <h3>Isaiah Francois</h3>
-                    <img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
-                    <p>UI Developer</p>
-                </div>
-            </div>
-
-            <div class="people">
-                <div class="contribution">
-                    <h3>Levi Thomas</h3>
-                    <img src="images/levi.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/TheLessonHere"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                    <p>UI Developer</p>
-                </div>
-            </div>
-
-            <div class="people">
-                <div class="contribution">
-                    <h3>Dennis Mercado</h3>
-                    <img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/denmercs"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                    <p>UI Developer</p>
-                </div>
-            </div>
-
-            <div class="people">
-                <div class="contribution">
-                    <h3>Leland Rogers</h3>
-                    <img src="images/leland.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/ltrii"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                    <p>Team Leader</p>
+        <main class="about">
+            <section class="contributors">
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Isaiah Francois</h3>
+                        <img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
+                        <p>UI Developer</p>
+                    </div>
                 </div>
 
-            </div>
-
-            <div class="people">
-                <div class="contribution">
-                    <h3>Jarred Stanford</h3>
-                    <img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/JarredStanford"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                    <p>Frontend Architect</p>
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Levi Thomas</h3>
+                        <img src="images/levi.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/TheLessonHere"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                        <p>UI Developer</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="people">
-                <div class="contribution">
-                    <h3>Andy Bettisworth</h3>
-                    <img src="images/andy.png" alt="Isaiah Francois" class="pImages">
-                    <a href="https://github.com/wurde"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                    <p>Backend Architect</p>
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Dennis Mercado</h3>
+                        <img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/denmercs"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                        <p>UI Developer</p>
+                    </div>
                 </div>
-            </div>
-        </section>
+
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Leland Rogers</h3>
+                        <img src="images/leland.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/ltrii"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                        <p>Team Leader</p>
+                    </div>
+
+                </div>
+
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Jarred Stanford</h3>
+                        <img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/JarredStanford"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                        <p>Frontend Architect</p>
+                    </div>
+                </div>
+
+                <div class="people">
+                    <div class="contribution">
+                        <h3>Andy Bettisworth</h3>
+                        <img src="images/andy.png" alt="Isaiah Francois" class="pImages">
+                        <a href="https://github.com/wurde"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                        <p>Backend Architect</p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; Lambda 2019</p>
+            <div class="fLinks">
+                <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
+                <a href="index.html">Home</a>
+                <a href="#">Back to the Top</a></div>
+        </footer>
     </header>
 
-    <footer>
-        <p>&copy; Lambda 2019</p>
-        <div class="fLinks">
-            <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
-            <a href="index.html">Home</a>
-            <a href="#">Back to the Top</a></div>
-    </footer>
+</body>
 
-</body></html>
+</html>
