Fixed Menu on both pages

--- a/about.html
+++ b/about.html
@@ -16,13 +16,10 @@
     <header class="homeHeader">
        <div class="aboutHeader"></div>
         <div class="homeHeader-top2">
-            <i class="fab fa-elementor" id="menu"></i>
+            <img class="aboutMenu" src="images/menu.png" alt="Menu">
             <h1 class="aboutHeader">About the Team</h1>
-            <div>
-                <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign Up/Sign In</a>
-            </div>
         </div>
-        <div class="menuItems">
+        <div class="menuItems2">
             <a href="https://tender-lamarr-7c3eda.netlify.com/">Start Here</a>
             <a href="index.html">Home</a>
             <a href="#">PlaceHolder</a>
@@ -93,7 +90,7 @@
                 <a href="#">Back to the Top</a></div>
         </footer>
     </header>
-
+<script src="about.js"></script>
 </body>
 
 </html>
