--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="b2">
     <header class="homeHeader">
         <div class="homeHeader-top">
-            <i class="fab fa-elementor" id="menu"></i>
+            <img src="images/menu.png" alt="Menu" id="menu">
             <img src="images/logo.png" alt="Logo" class="homeLogo">
             <div>
                 <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign Up/Sign In</a>
