Removed Roboto Font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css">
 </head>
 
 <body class="b2">
@@ -84,4 +84,6 @@
             <a href="#">Back to the Top</a></div>
     </footer>
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
