Added Aos library and added elements to main content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="bower_components/aos/dist/aos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="b2">
@@ -36,43 +36,43 @@
     </header>
     <main class="mainContent">
         <div class="mainCreate">
-            <div class="createDiv">
+            <div class="createDiv" data-aos="fade-right">
                 <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="cSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/create.svg" alt="Create">
+                <img src="images/create.svg" alt="Create" data-aos="fade-left">
             </div>
         </div>
         <div class="mainFind">
-            <div class="findDiv">
+            <div class="findDiv" data-aos="fade-right">
                 <h1>Find</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
                 <div class="btn btn-rounded" id="fSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/find.svg" alt="Find">
+                <img src="images/find.svg" alt="Find" data-aos="fade-left">
             </div>
         </div>
         <div class="mainShare">
-            <div class="shareDiv">
+            <div class="shareDiv" data-aos="fade-right">
                 <h1>Share</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="sSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/share.svg" alt="Share">
+                <img src="images/share.svg" alt="Share" data-aos="fade-left">
             </div>
         </div>
         <div class="mainRate">
-            <div class="rateDiv">
+            <div class="rateDiv" data-aos="fade-right">
                 <h1>Rate</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="rSeeMore">Back to Top</div>
             </div>
             <div>
-                <img src="images/rate.svg" alt="Rate">
+                <img src="images/rate.svg" alt="Rate" data-aos="fade-left">
             </div>
         </div>
     </main>
@@ -83,7 +83,7 @@
             <a href="about.html">About</a>
             <a href="#">Back to the Top</a></div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="index.js"></script>
-</body>
-
-</html>
+    <script src="aos.js"></script>
+</body></html>
