--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 
 <body class="b2">
@@ -36,43 +36,43 @@
     </header>
     <main class="mainContent">
         <div class="mainCreate">
-            <div class="createDiv" data-aos="fade-right">
+            <div class="createDiv">
                 <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="cSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/create.svg" alt="Create" data-aos="fade-left">
+                <img src="images/create.svg" alt="Create">
             </div>
         </div>
         <div class="mainFind">
-            <div class="findDiv" data-aos="fade-right">
+            <div class="findDiv">
                 <h1>Find</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
                 <div class="btn btn-rounded" id="fSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/find.svg" alt="Find" data-aos="fade-left">
+                <img src="images/find.svg" alt="Find">
             </div>
         </div>
         <div class="mainShare">
-            <div class="shareDiv" data-aos="fade-right">
+            <div class="shareDiv">
                 <h1>Share</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="sSeeMore">Next Feature</div>
             </div>
             <div>
-                <img src="images/share.svg" alt="Share" data-aos="fade-left">
+                <img src="images/share.svg" alt="Share">
             </div>
         </div>
         <div class="mainRate">
-            <div class="rateDiv" data-aos="fade-right">
+            <div class="rateDiv">
                 <h1>Rate</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
                 <div class="btn btn-rounded" id="rSeeMore">Back to Top</div>
             </div>
             <div>
-                <img src="images/rate.svg" alt="Rate" data-aos="fade-left">
+                <img src="images/rate.svg" alt="Rate">
             </div>
         </div>
     </main>
@@ -83,7 +83,9 @@
             <a href="about.html">About</a>
             <a href="#">Back to the Top</a></div>
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="index.js"></script>
-    <script src="aos.js"></script>
+    <script src="slick.js"></script>
 </body></html>
