--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
 </head>
 
 <body class="b2">
@@ -34,12 +35,11 @@
             <h1>Click to Learn More</h1>
         </div>
     </header>
-    <main class="mainContent">
+    <main class="slick-carousel mainContent">
         <div class="mainCreate">
             <div class="createDiv">
                 <h1>Create</h1>
-                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="cSeeMore">Next Feature</div>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
             </div>
             <div>
                 <img src="images/create.svg" alt="Create">
@@ -49,7 +49,6 @@
             <div class="findDiv">
                 <h1>Find</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
-                <div class="btn btn-rounded" id="fSeeMore">Next Feature</div>
             </div>
             <div>
                 <img src="images/find.svg" alt="Find">
@@ -58,8 +57,7 @@
         <div class="mainShare">
             <div class="shareDiv">
                 <h1>Share</h1>
-                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="sSeeMore">Next Feature</div>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
             </div>
             <div>
                 <img src="images/share.svg" alt="Share">
@@ -68,8 +66,7 @@
         <div class="mainRate">
             <div class="rateDiv">
                 <h1>Rate</h1>
-                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="rSeeMore">Back to Top</div>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
             </div>
             <div>
                 <img src="images/rate.svg" alt="Rate">
@@ -83,9 +80,10 @@
             <a href="about.html">About</a>
             <a href="#">Back to the Top</a></div>
     </footer>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
     <script src="index.js"></script>
-    <script src="slick.js"></script>
+    <script src="scripts/slick.js"></script>
 </body></html>
