Added Carousel and Customized

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>Click to Learn More</h1>
         </div>
     </header>
-    <main class="slick-carousel mainContent">
+    <main class="slick-carousel" id="mainContent">
         <div class="mainCreate">
             <div class="createDiv">
                 <h1>Create</h1>
