Adjusted media queries

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="createDiv">
                 <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span></p>
             </div>
             <div>
                 <img src="images/create.svg" alt="Create">
