Added Media Queries and Carousel to About Page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
 </head>
 
 <body class="aBody">
@@ -21,16 +23,15 @@
         <div class="menuItems2">
             <a href="https://tender-lamarr-7c3eda.netlify.com/">Start Here</a>
             <a href="index.html">Home</a>
-            <a href="#">PlaceHolder</a>
         </div>
         <main class="about">
-            <section class="contributors">
+            <section class="slick-carousel2 contributors">
                 <div class="people">
                     <div class="contribution">
                         <h3>Isaiah Francois</h3>
                         <img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
                         <p>UI Developer</p>
+                        <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
                     </div>
                 </div>
 
@@ -81,15 +82,11 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <p>&copy; Lambda 2019</p>
-            <div class="fLinks">
-                <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
-                <a href="index.html">Home</a>
-                <a href="#">Back to the Top</a></div>
-        </footer>
     </header>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
+    <script src="scripts/slick.js"></script>
     <script src="about.js"></script>
-</body>
-
-</html>
+</body></html>
