Fixed feature grammer from home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="mainCreate">
             <div class="createDiv">
                 <h1>Create</h1>
-                <p>How To gives users the ability to create in-depth guides that allow them to share their knowledge or exerpertise on a given subject with those who are less familiar with it. This allows all members of our user base to become more well-rounded and efficient!</p>
+                <p>How To gives users the ability to create in-depth guides that allow them to share their knowledge or expertise on a given subject with those who are less familiar with it. This allows all members of our user base to become more well-rounded and efficient!</p>
             </div>
             <div>
                 <img src="images/create.svg" alt="Create">
@@ -65,7 +65,7 @@
         <div class="mainRate">
             <div class="rateDiv">
                 <h1>Rate</h1>
-                <p>How To utilizes a simple 5-star rating system so that users can give feedback, and know which guides are the best for any given task or topic. This allows you to learn from only the best of the best!</p>
+                <p>How To utilizes a simple 5-star rating system so that users can give feedback, and to know which guides are the best for any given task or topic. This allows you to learn from only the best of the best!</p>
             </div>
             <div>
                 <img src="images/rate.svg" alt="Rate">
