Changed About Page Carousel Design

--- a/about.html
+++ b/about.html
@@ -25,61 +25,104 @@
             <a href="index.html">Home</a>
         </div>
         <main class="about">
+            <!--
+            <div class="list">
+                <h2>Team</h2>
+                <ul>
+                    <li>Isaiah Francois</li>
+                    <li>Levi Thomas</li>
+                    <li>Dennis Mercado</li>
+                    <li>Leland Rogers</li>
+                    <li>Jarred Stanford</li>
+                    <li>Andy Bettisworth</li>
+                </ul>
+            </div>
+-->
             <section class="slick-carousel2 contributors">
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Isaiah Francois</h3>
-                        <img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
-                        <p>UI Developer</p>
-                        <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
+                            <p>UI Developer</p>
+                            <a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link" class="gImages"></a>
+                        </div>
+                        <div class="description">
+                            <h3>Isaiah Francois</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Levi Thomas</h3>
-                        <img src="images/levi.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/TheLessonHere"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                        <p>UI Developer</p>
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/levi.png" alt="Isaiah Francois" class="pImages">
+                            <a href="https://github.com/TheLessonHere"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                            <p>UI Developer</p>
+                        </div>
+                        <div class="description">
+                            <h3>Levi Thomas</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Dennis Mercado</h3>
-                        <img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/denmercs"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                        <p>UI Developer</p>
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
+                            <a href="https://github.com/denmercs"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                            <p>UI Developer</p>
+                        </div>
+                        <div class="description">
+                            <h3>Dennis Mercado</h3>
+                            <p>Life long learner!</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Leland Rogers</h3>
-                        <img src="images/leland.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/ltrii"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                        <p>Team Leader</p>
-                    </div>
-
-                </div>
-
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Jarred Stanford</h3>
-                        <img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/JarredStanford"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                        <p>Frontend Architect</p>
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/leland.png" alt="Isaiah Francois" class="pImages">
+                            <a href="https://github.com/ltrii"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                            <p>Team Leader</p>
+                        </div>
+                        <div class="description">
+                            <h3>Leland Rogers</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="people">
-                    <div class="contribution">
-                        <h3>Andy Bettisworth</h3>
-                        <img src="images/andy.png" alt="Isaiah Francois" class="pImages">
-                        <a href="https://github.com/wurde"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
-                        <p>Backend Architect</p>
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
+                            <a href="https://github.com/JarredStanford"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                            <p>Frontend Architect</p>
+                        </div>
+                        <div class="description">
+                            <h3>Jarred Stanford</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                        </div>
                     </div>
                 </div>
+
+                <div class="slide">
+                    <div class="people">
+                        <div class="contribution">
+                            <img src="images/andy.png" alt="Isaiah Francois" class="pImages">
+                            <a href="https://github.com/wurde"><img src="images/GitHub-Mark-32px.png" alt="Isaiah Francois" class="gImages"></a>
+                            <p>Backend Architect</p>
+                        </div>
+                        <div class="description">
+                            <h3>Andy Bettisworth</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                        </div>
+                    </div>
+                </div>
+
             </section>
         </main>
     </header>
