Added faded carousel and small descriptions to about page

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="description">
                             <h3>Isaiah Francois</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                            <p>Hi my name is Isaiah Francois. Im a 18yr old teenage programmer hoping to dominate the tech industry and show the world what I'm capable of.</p>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="description">
                             <h3>Levi Thomas</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                            <p>Hi my name is Levi Thomas.</p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="description">
                             <h3>Dennis Mercado</h3>
-                            <p>Life long learner!</p>
+                            <p>Hi my name is Dennis Mercado.</p>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="description">
                             <h3>Leland Rogers</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                            <p>Hi my name is Leland Rogers.</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="description">
                             <h3>Jarred Stanford</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                            <p>Hi my name is Jarred Stanford.</p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="description">
                             <h3>Andy Bettisworth</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero soluta neque aliquam deleniti facere ad quos numquam quod illo perspiciatis ea suscipit voluptatum ipsam maiores accusantium quam id, ratione, repudiandae.</p>
+                            <p>Hi my name is Andy Bettisworth.</p>
                         </div>
                     </div>
                 </div>
@@ -132,4 +132,6 @@
     <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
     <script src="scripts/slick.js"></script>
     <script src="about.js"></script>
-</body></html>
+</body>
+
+</html>
