--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="description">
                             <h3>Levi Thomas</h3>
-                            <p>Hi my name is Levi Thomas.</p>
+                            <p>I'm Levi Thomas. I'm a 24 year old programmer from Pleasant View, Utah. Creative problem solving is my specialty and I like to bring new ideas and a bit of fun to every team I'm apart of.</p>
                         </div>
                     </div>
                 </div>
