--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="description">
                             <h3>Dennis Mercado</h3>
-                            <p>Hi my name is Dennis Mercado.</p>
+                            <p>I am Dennis Mercado, I love to design and also code. I am pretty chill person and I just became a dad.</p>
                         </div>
                     </div>
                 </div>
