Minified files to run site faster

--- a/index.html
+++ b/index.html
@@ -1,88 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Home</title>
-    <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
-</head>
-
-<body class="b2">
-    <header class="homeHeader">
-        <div class="homeHeader-top">
-            <img src="images/menu.png" alt="Menu" id="menu">
-            <img src="images/logo.png" alt="Logo" class="homeLogo">
-            <div>
-                <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign Up/Sign In</a>
-            </div>
-        </div>
-        <div class="menuItems">
-            <a href="https://tender-lamarr-7c3eda.netlify.com/">Start Here</a>
-            <a href="about.html">About</a>
-        </div>
-        <div class="homeHeader-middle">
-            By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
-        </div>
-        <div class="homeHeader-bottom">
-            <img src="images/book.png" alt="Learn More" id="learnMore">
-            <h1>Click to Learn More</h1>
-        </div>
-    </header>
-    <main class="slick-carousel" id="mainContent">
-        <div class="mainCreate">
-            <div class="createDiv">
-                <h1>Create</h1>
-                <p>How To gives users the ability to create in-depth guides that allow them to share their knowledge or expertise on a given subject with those who are less familiar with it. This allows all members of our user base to become more well-rounded and efficient!</p>
-            </div>
-            <div>
-                <img src="images/create.svg" alt="Create">
-            </div>
-        </div>
-        <div class="mainFind">
-            <div class="findDiv">
-                <h1>Find</h1>
-                <p>How To's search function allows you to find multiple guides on a number of subjects! You can filter by tags, ratings, publishing date, or even by the name of trusted users whose guides you have used before!</p>
-            </div>
-            <div>
-                <img src="images/find.svg" alt="Find">
-            </div>
-        </div>
-        <div class="mainShare">
-            <div class="shareDiv">
-                <h1>Share</h1>
-                <p>How To also allows users to share their favorite guides on their social media so that their friends and followers can also have the power of information right at their fingertips!</p>
-            </div>
-            <div>
-                <img src="images/share.svg" alt="Share">
-            </div>
-        </div>
-        <div class="mainRate">
-            <div class="rateDiv">
-                <h1>Rate</h1>
-                <p>How To utilizes a simple 5-star rating system so that users can give feedback, and to know which guides are the best for any given task or topic. This allows you to learn from only the best of the best!</p>
-            </div>
-            <div>
-                <img src="images/rate.svg" alt="Rate">
-            </div>
-        </div>
-    </main>
-    <footer class="footer">
-        <p>&copy; Lambda 2019</p>
-        <div class="fLinks">
-            <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
-            <a href="about.html">About</a>
-            <a href="#">Back to the Top</a></div>
-    </footer>
-    <script src="scripts/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-    <script src="index.js"></script>
-    <script src="scripts/slick.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="style.css"><title>Home</title> <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script> <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet"><link rel="shortcut icon" href="images/favicon.ico" /><link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" /><link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" /></head><body class="b2"> <header class="homeHeader"><div class="homeHeader-top"> <img src="images/menu.png" alt="Menu" id="menu"> <img src="images/logo.png" alt="Logo" class="homeLogo"><div> <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign Up/Sign In</a></div></div><div class="menuItems"> <a href="https://tender-lamarr-7c3eda.netlify.com/">Start Here</a> <a href="about.html">About</a></div><div class="homeHeader-middle"> By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.</div><div class="homeHeader-bottom"> <img src="images/book.png" alt="Learn More" id="learnMore"><h1>Click to Learn More</h1></div> </header> <main class="slick-carousel" id="mainContent"><div class="mainCreate"><div class="createDiv"><h1>Create</h1><p>How To gives users the ability to create in-depth guides that allow them to share their knowledge or expertise on a given subject with those who are less familiar with it. This allows all members of our user base to become more well-rounded and efficient!</p></div><div> <img src="images/create.svg" alt="Create"></div></div><div class="mainFind"><div class="findDiv"><h1>Find</h1><p>How To's search function allows you to find multiple guides on a number of subjects! You can filter by tags, ratings, publishing date, or even by the name of trusted users whose guides you have used before!</p></div><div> <img src="images/find.svg" alt="Find"></div></div><div class="mainShare"><div class="shareDiv"><h1>Share</h1><p>How To also allows users to share their favorite guides on their social media so that their friends and followers can also have the power of information right at their fingertips!</p></div><div> <img src="images/share.svg" alt="Share"></div></div><div class="mainRate"><div class="rateDiv"><h1>Rate</h1><p>How To utilizes a simple 5-star rating system so that users can give feedback, and to know which guides are the best for any given task or topic. This allows you to learn from only the best of the best!</p></div><div> <img src="images/rate.svg" alt="Rate"></div></div> </main> <footer class="footer"><p>&copy; Lambda 2019</p><div class="fLinks"> <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a> <a href="about.html">About</a> <a href="#">Back to the Top</a></div> </footer> <script src="scripts/jquery-3.4.1.min.js"></script> <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script> <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script> <script src="index.js"></script> <script src="scripts/slick.js"></script> </body></html>
